--- a/package.json
+++ b/package.json
@@ -1,78 +1,104 @@
 {
-  "name": "gymapp",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular-material-components/file-input": "^5.0.0",
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
-    "@types/googlemaps": "^3.40.3",
-    "angular-datatables": "^10.0.0",
-    "bootstrap": "^4.5.3",
-    "bs-stepper": "^1.7.0",
-    "chart.js": "^2.9.4",
-    "datatables.net": "^1.10.22",
-    "datatables.net-dt": "^1.10.22",
-    "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.5.1",
-    "luxon": "^1.25.0",
-    "mat-timepicker": "^4.1.0",
-    "moment": "^2.29.1",
-    "ng2-charts": "^2.4.2",
-    "ngx-bootstrap": "^6.2.0",
-    "ngx-google-places-autocomplete": "^2.0.5",
-    "ngx-mat-timepicker": "^9.0.4",
-    "ngx-material-timepicker": "^5.5.3",
-    "ngx-spinner": "^10.0.1",
-    "ngx-time-picker": "^9.0.4",
-    "ngx-toastr": "^10.2.0",
-    "pusher-js": "^7.0.2",
-    "rxjs": "~6.4.0",
-    "toastr": "^2.1.4",
-    "tslib": "^1.10.0",
-    "typeface-source-sans-pro": "^1.1.13",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
-    "@angular/cli": "~8.3.21",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/datatables.net": "^1.10.19",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.5.4",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  }
+    "name": "gymapp",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular-material-components/file-input": "^5.0.0",
+        "@angular/animations": "~8.2.14",
+        "@angular/cdk": "^8.2.3",
+        "@angular/common": "~8.2.14",
+        "@angular/compiler": "~8.2.14",
+        "@angular/core": "~8.2.14",
+        "@angular/forms": "~8.2.14",
+        "@angular/material": "^8.2.3",
+        "@angular/platform-browser": "~8.2.14",
+        "@angular/platform-browser-dynamic": "^9.1.13",
+        "@angular/router": "~8.2.14",
+        "@fortawesome/angular-fontawesome": "^0.8.1",
+        "@fortawesome/fontawesome-free": "^5.15.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.32",
+        "@fortawesome/free-brands-svg-icons": "^5.15.1",
+        "@fortawesome/free-solid-svg-icons": "^5.15.1",
+        "@fullcalendar/angular": "^5.5.0",
+        "@fullcalendar/daygrid": "^5.5.0",
+        "@fullcalendar/interaction": "^5.5.0",
+        "@kolkov/angular-editor": "^1.1.4",
+        "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+        "@types/googlemaps": "^3.40.3",
+        "@williamsrivas/ngx-signature-pad": "0.0.4",
+        "angular-calendar": "^0.28.22",
+        "angular-cli-ghpages": "^1.0.0-rc.1",
+        "angular-datatables": "^10.0.0",
+        "bootstrap": "^4.5.3",
+        "browser-image-compression": "^1.0.14",
+        "bs-stepper": "^1.7.0",
+        "chart.js": "^2.9.4",
+        "datatables.net": "^1.10.22",
+        "datatables.net-dt": "^1.10.22",
+        "date-fns": "^2.16.1",
+        "file-saver": "^2.0.5",
+        "font-awesome": "^4.7.0",
+        "hammerjs": "^2.0.8",
+        "heic2any": "0.0.3",
+        "html2canvas": "^1.0.0-rc.7",
+        "html2pdf.js": "^0.9.2",
+        "jquery": "^3.5.1",
+        "jspdf": "^2.3.0",
+        "luxon": "^1.25.0",
+        "mat-timepicker": "^4.1.0",
+        "moment": "^2.29.1",
+        "ng2-charts": "^2.4.2",
+        "ng2-pdf-viewer": "^6.3.2",
+        "ngx-bootstrap": "^6.2.0",
+        "ngx-dropzone": "^2.3.0",
+        "ngx-filesaver": "^11.0.0",
+        "ngx-google-places-autocomplete": "^2.0.5",
+        "ngx-image-compress": "^11.0.3",
+        "ngx-mat-timepicker": "^9.0.4",
+        "ngx-material-timepicker": "^5.5.3",
+        "ngx-sharebuttons": "^8.0.5",
+        "ngx-signaturepad": "0.0.9",
+        "ngx-spinner": "^10.0.1",
+        "ngx-time-picker": "^9.0.4",
+        "ngx-toastr": "^10.2.0",
+        "pusher-js": "^7.0.2",
+        "rxjs": "~6.4.0",
+        "signature_pad": "^3.0.0-beta.4",
+        "social-share-button": "^2.2.0",
+        "toastr": "^2.1.4",
+        "tslib": "^1.10.0",
+        "typeface-source-sans-pro": "^1.1.13",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.803.21",
+        "@angular/cli": "~8.3.21",
+        "@angular/compiler-cli": "~8.2.14",
+        "@angular/language-service": "~8.2.14",
+        "@types/datatables.net": "^1.10.19",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/jquery": "^3.5.4",
+        "@types/node": "~8.9.4",
+        "codelyzer": "^5.0.0",
+        "jasmine-core": "~3.4.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.1.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.15.0",
+        "typescript": "~3.5.3"
+    }
 }
